<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>gov.samhsa.mhc</groupId>
    <artifactId>try-policy</artifactId>
    <version>1.8.0-SNAPSHOT</version>

    <packaging>jar</packaging>

    <ciManagement>
        <system>Jenkins</system>
        <url>http://BhitsBuild03/</url>
    </ciManagement>

    <!-- Since buildnumber-maven-plugin uses git command, git command must in
        path. i.e. need set git in the path Environment variable -->
    <scm>
        <url>https://github.com/FEISystems/try-policy-api</url>
        <connection>scm:git:https://github.com/FEISystems/try-policy-api.git</connection>
        <developerConnection>scm:git:https://github.com/FEISystems/try-policy-api.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <id>Bhits.Java</id>
            <name>Bhits Java</name>
            <email>Bhits.Java@feisystems.com</email>
            <organization>FEi Systems</organization>
            <roles>
                <role>developer</role>
            </roles>
            <timezone>-5</timezone>
        </developer>
    </developers>

    <distributionManagement>
        <repository>
            <id>deployment</id>
            <name>Internal Releases</name>
            <url>http://${maven.nexus.servername}/nexus/content/repositories/releases/</url>
        </repository>
        <snapshotRepository>
            <id>deployment</id>
            <name>Internal Releases</name>
            <url>http://${maven.nexus.servername}/nexus/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.3.1.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <spring.cloud.version>Brixton.M4</spring.cloud.version>
        <start-class>gov.samhsa.mhc.trypolicy.TryPolicyApplication</start-class>
        <common.libraries.version>1.1.0</common.libraries.version>
        <docker.maven.version>0.4.3</docker.maven.version>
        <lombok.version>1.16.6</lombok.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-starter-parent</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>gov.samhsa.mhc</groupId>
                <artifactId>document-converter</artifactId>
                <version>${common.libraries.version}</version>
            </dependency>
            <dependency>
                <groupId>gov.samhsa.mhc</groupId>
                <artifactId>document-transformer</artifactId>
                <version>${common.libraries.version}</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <dependencies>
        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <!--  include everything that is needed for Spring MVC to work -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-eureka</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-ribbon</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-feign</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <dependency>
            <groupId>gov.samhsa.mhc</groupId>
            <artifactId>document-converter</artifactId>
        </dependency>
        <dependency>
            <groupId>gov.samhsa.mhc</groupId>
            <artifactId>document-transformer</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.spotify</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>${docker.maven.version}</version>
                <configuration>
                    <imageName>bhits/${project.artifactId}</imageName>
                    <dockerDirectory>src/main/docker</dockerDirectory>
                    <buildArgs>
                        <finalName>${project.build.finalName}.jar</finalName>
                    </buildArgs>
                    <resources>
                        <resource>
                            <targetPath>/</targetPath>
                            <directory>${project.build.directory}</directory>
                            <include>${project.build.finalName}.jar</include>
                        </resource>
                    </resources>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>